# roadmap

./: .travis.yaml  .travis.yml  AutoScalingHadoop_1.template  README.md  Untitled Diagram.xml  dco.md  hadoop_multi_node.template  hadoop_signal_wait_condition.template  m.sh  macdown.md  macos.md  signal_auto_scale_hadoop.template  sing-off.md
BigDataOnCloud/: signal_auto_scale_hadoop.template
acmeair/: AcmeAirWebServer.yaml  AcmeairScale.yaml  DockerLBaaS.yaml  lb-asg.yaml  simplelbaas.yaml
apache/: mesos.txt
big-data-on-cloud/: AutoScalingSimple.template  Hadoop.HOT
big_data_on_cloud/: AutoScalingHadoopCPU.template  hadoop_scale_up_demo.txt
blazar_and_heat/: README.txt
dcos/: LICENSE  README.md  build.sh  diff  docker-compose.yml
diagram/: 500nodes.vsdx  Untitled Diagram.xml  re-provision.md
docker/: manifest-tool.md
docker/docker-integration/prototype/egodocker/ego-docker/: setup.cfg
docker/docker-integration/prototype/egodocker/ego-docker/egodocker/: context.py  exception.py  i18n.py  paths.py
docker/docker-integration/prototype/egodocker/ego-docker/egodocker/common/: gettextutils.py  lockutils.py  log.py  periodic_task.py  processutils.py
docker/docker-integration/prototype/egodocker/ego-docker/egodocker/network/: __init__.py  api.py  linux_net.py  model.py
docker/docker-integration/prototype/egodocker/ego-docker/egodocker/network/neutronv2/: __init__.py  vifs.py
docker/docker-integration/prototype/egodocker/ego-docker/egodocker/pod/: lifecycle_manager.py
dockerfile/: Dockerfile
gre/: gre1.sh
heat-docker/: README.txt
k8s/: dev-k8s  (+1 more)
(+586 files in other folders)
