[metadata]
name = egoocker
summary = Docker driver for ego.
description-file =
    README.rst
author = Jian Qiu
author-email = qiujian@cn.ibm.com
home-page = http://www.ibm.com/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    egodocker

[global]
setup-hooks =
    pbr.hooks.setup_hook
